--- a/Evans Tucker's Resume.html
+++ b/Evans Tucker's Resume.html
@@ -92,12 +92,73 @@
   <body onload="calculateYears()">
 <div class="contact">
   <span class="bold">Evans Tucker</span><br>
-  <a href="tel:+1(971)336-3223">+1 (971) 336-3223</a><br>
+  <a href="tel:+1-971-336-3223">+1-971-336-3223</a><br>
   <a href="mailto:evans.tucker@gmail.com">evans.tucker@gmail.com</a>
 </div>
 <div class="headline">Biography</div>
-<span>Evans Tucker is a senior Linux systems administrator, probably best known for causing a brief company-wide outage, but occasionally recognized for his elegant code and excellent process documentation. He practices Agile software development using DevOps, Scrum, and Kanban methodologies. In 2015, he and his family sold almost everything they owned, and moved from Austin, Texas to Portland, Oregon to escape the heat, mosquitoes, and ennui. Evans is a strong advocate for: free and open source software; a decentralized, distributed web; autonomous electric cars; space colonization; and a post-scarcity economy where we can just sit around philosophizing all day long.</span>
+<span>Evans Tucker is a hardened DevOps Engineer, probably best known for causing a brief company-wide outage, but occasionally recognized for his elegant code and excellent process documentation. He practices Agile software development using DevOps, Scrum, and Kanban methodologies. In 2015, he and his family sold almost everything they owned, and moved from Austin, Texas to Portland, Oregon to escape the heat, mosquitoes, and ennui. Evans is a strong advocate for: free and open source software; a decentralized, distributed web; autonomous electric cars; space colonization; and a post-scarcity economy where we can just sit around philosophizing all day long.</span>
     <div class="headline">Experience</div>
+<div class="left">DevOps Engineer at <a href="https://www.consensys.net/">ConsenSys Software Inc.</a> (Remote/Telecommute)</div>
+<div class="right">2020-08-17 to <span class="years" data-start-date="2020-08-17" data-end-date=""></span></div>
+<div class="clear">
+      <p>Same shit, new company name.</p>
+    </div>
+<div class="left">DevOps Engineer at <a href="https://www.consensys.net/">ConsenSys Inc.</a> (Remote/Telecommute)</div>
+<div class="right">2018-04-18 to 2020-08-17<span class="years" data-start-date="2018-04-18" data-end-date="2020-08-17"></span></div>
+<div class="clear">
+      <p>ConsenSys is a global blockchain technology company building the infrastructure, applications, and practices that enable a decentralized world.  It was founded by Joe Lubin, who is also a co-founder of the Ethereum blockchain. Instead of a traditional hierarchy, it's comprised of a venture studio with over 50 autonomous startups; a few alignment circles that govern funding, HR, etc.; and an ever-changing list of other circles that host conferences, provide blockchain education, etc. It's a remote-first company based in New York with offices all around the world. I was hired at one of the startups within ConsenSys named Balanc3. Balanc3 provides financial management for digital assets like cryptocurrency and tokens.</p>
+      <p>When I started at Balanc3, I was given five Kubernetes clusters that the previous DevOps Engineer deployed to AWS with Terraform and some custom Ansible scripts. I quickly learned how to maintain these clusters and deploy new services to them. On the tenth business day of my employment, my predecessor handed me the admin keys and left Balanc3 to go back into the larger ConsenSys mesh, leaving me as the sole DevOps person for Balanc3. During my first year, I worked with ~20 developers in 3 countries to add ~20 services to our platform, roughly doubling the number of services when I first started.</p>
+      <p>Meridio, Codefi Activate, Codefi Airswap, Mata Capital, Kaleido, a large bond credit rating business.</p>
+      <p>auth0</p>
+      <p>bitcoind</p>
+      <p>cassandra, timescaledb, mongodb postgresql, redis</p>
+      <p>cert-manager let's encrypt nginx-ingress external-dns</p>
+      <p>chartmuseum</p>
+      <p>cloudflare</p>
+      <p>dockerfile</p>
+      <p>elasticStack (elasticsearch, filebeat, kibana)</p>
+      <p>fluxcd?</p>
+      <p>github</p>
+      <p>gitlab CI, Let's Encrypt ACME cert-manager,</p>
+      <p>gitlab-runner</p>
+      <p>harbor with trivy</p>
+      <p>hashicorp vault?</p>
+      <p>helm</p>
+      <p>jenkinsfile CI/CD pipeline</p>
+      <p>keycloak oidc</p>
+      <p>kong api gateway</p>
+      <p>kops</p>
+      <p>kube2iam</p>
+      <p>linkerd/istio?</p>
+      <p>metabase</p>
+      <p>metrics-server</p>
+      <p>nginx-ingress</p>
+      <p>node.js create react app (CRA)</p>
+      <p>oauth2 and oidc</p>
+      <p>okta</p>
+      <p>parity</p>
+      <p>pomerium</p>
+      <p>prometheus (prometheus-operator) alertmanager grafana</p>
+      <p>redis</p>
+      <p>self-organizing</p>
+      <p>skaffold</p>
+      <p>sonarqube</p>
+      <p>sonatype nexus and verdaccio</p>
+      <p>unleash</p>
+      <p>unleash</p>
+      <p>worked with Metamask team, spoke with PWC about security needs SOC2 etc.?</p>
+      <p>yak shaving</p>
+      <p>Joined ConsenSys in April 2018 on the Balanc3 project, transitioned to Meridio, and was the lone DevOps person supporting multiple teams that eventually coalesced into the Codefi group.</p>
+      <p>Currently specialized in architecting containerized solutions on Kubernetes using Helm, and building CI/CD workflows.</p>
+      <p>Advocate for a DevSecOps culture prioritizing infosec and compliance.</p>
+      <p>Experience and enthusiasm for building decentralized architectures using self-hosted free open source software and P2P protocols like IPFS.</p>
+      <p>{"Airswap"=>"“peer-to-peer trading through a suite of apps and tools that are free and easy to use.” Migrated some services to a new AWS account and new Kubernetes cluster."}</p>
+      <p>{"Activate"=>"“buy, use, and manage your utility tokens.” Refined CI/CD pipelines, improved code auditing and security scanning."}</p>
+      <p>{"Codefi"=>"“blockchain application suite powering commerce and finance.” Built new multi-tenant clusters and CI/CD pipelines in US and EU to support multiple teams and projects."}</p>
+      <p>{"Assets"=>"deployed new Kubernetes clusters and our Assets suite of applications for a real estate private equity platform."}</p>
+      <p>{"Meridio"=>"“create and invest in shares of individual properties on the blockchain.” Migrated expensive AWS ECS clusters to Kubernetes. Deployed several whiteboxed versions of this platform for various clients."}</p>
+      <p>{"Balanc3"=>"“financial management for digital assets.” Updated custom Ansible-based Kubernetes clusters to most popular community-supported tool at the time, kops. Also migrated all custom deployments to Helm. Significantly reduced the cost of the clusters as well by consolidating and performance tuning."}</p>
+    </div>
 <div class="left">Site Reliability Engineer at <a href="https://www.iovation.com/">iovation Inc.</a> (Portland, OR)</div>
 <div class="right">2017-11-13 to 2018-03-09<span class="years" data-start-date="2017-11-13" data-end-date="2018-03-09"></span></div>
 <div class="clear">
