--- a/Evans Tucker's Resume.html
+++ b/Evans Tucker's Resume.html
@@ -92,78 +92,26 @@
   <body onload="calculateYears()">
 <div class="contact">
   <span class="bold">Evans Tucker</span><br>
-  <a href="tel:+1-971-336-3223">+1-971-336-3223</a><br>
-  <a href="mailto:evans.tucker@gmail.com">evans.tucker@gmail.com</a>
+  <a href="tel:+1971-336-3223">+1 971-336-3223</a><br>
+  <a href="mailto:gmail@evanstucker.com">gmail@evanstucker.com</a>
 </div>
 <div class="headline">Biography</div>
-<span>Evans Tucker is a hardened DevOps Engineer, probably best known for causing a brief company-wide outage, but occasionally recognized for his elegant code and excellent process documentation. He practices Agile software development using DevOps, Scrum, and Kanban methodologies. In 2015, he and his family sold almost everything they owned, and moved from Austin, Texas to Portland, Oregon to escape the heat, mosquitoes, and ennui. Evans is a strong advocate for: free and open source software; a decentralized, distributed web; autonomous electric cars; space colonization; and a post-scarcity economy where we can just sit around philosophizing all day long.</span>
+<span>Evans Tucker is a hardened DevOps Engineer, probably best known for causing a brief company-wide outage, but occasionally recognized for his elegant code and excellent process documentation. Evans is a strong advocate for: free and open source software; a decentralized, distributed web; and a post-scarcity economy where we can just sit around philosophizing all day long.</span>
     <div class="headline">Experience</div>
-<div class="left">DevOps Engineer at <a href="https://www.consensys.net/">ConsenSys Software Inc.</a> (Remote/Telecommute)</div>
-<div class="right">2020-08-17 to <span class="years" data-start-date="2020-08-17" data-end-date=""></span></div>
+<div class="left">Lead DevOps Engineer at <a href="https://www.consensys.net/">ConsenSys Software Inc.</a> (Remote/Telecommute)</div>
+<div class="right">2018-04-18 to 2023-02-17<span class="years" data-start-date="2018-04-18" data-end-date="2023-02-17"></span></div>
 <div class="clear">
-      <p>Same shit, new company name.</p>
-    </div>
-<div class="left">DevOps Engineer at <a href="https://www.consensys.net/">ConsenSys Inc.</a> (Remote/Telecommute)</div>
-<div class="right">2018-04-18 to 2020-08-17<span class="years" data-start-date="2018-04-18" data-end-date="2020-08-17"></span></div>
-<div class="clear">
-      <p>ConsenSys is a global blockchain technology company building the infrastructure, applications, and practices that enable a decentralized world.  It was founded by Joe Lubin, who is also a co-founder of the Ethereum blockchain. Instead of a traditional hierarchy, it's comprised of a venture studio with over 50 autonomous startups; a few alignment circles that govern funding, HR, etc.; and an ever-changing list of other circles that host conferences, provide blockchain education, etc. It's a remote-first company based in New York with offices all around the world. I was hired at one of the startups within ConsenSys named Balanc3. Balanc3 provides financial management for digital assets like cryptocurrency and tokens.</p>
-      <p>When I started at Balanc3, I was given five Kubernetes clusters that the previous DevOps Engineer deployed to AWS with Terraform and some custom Ansible scripts. I quickly learned how to maintain these clusters and deploy new services to them. On the tenth business day of my employment, my predecessor handed me the admin keys and left Balanc3 to go back into the larger ConsenSys mesh, leaving me as the sole DevOps person for Balanc3. During my first year, I worked with ~20 developers in 3 countries to add ~20 services to our platform, roughly doubling the number of services when I first started.</p>
-      <p>Meridio, Codefi Activate, Codefi Airswap, Mata Capital, Kaleido, a large bond credit rating business.</p>
-      <p>auth0</p>
-      <p>bitcoind</p>
-      <p>cassandra, timescaledb, mongodb postgresql, redis</p>
-      <p>cert-manager let's encrypt nginx-ingress external-dns</p>
-      <p>chartmuseum</p>
-      <p>cloudflare</p>
-      <p>dockerfile</p>
-      <p>elasticStack (elasticsearch, filebeat, kibana)</p>
-      <p>fluxcd?</p>
-      <p>github</p>
-      <p>gitlab CI, Let's Encrypt ACME cert-manager,</p>
-      <p>gitlab-runner</p>
-      <p>harbor with trivy</p>
-      <p>hashicorp vault?</p>
-      <p>helm</p>
-      <p>jenkinsfile CI/CD pipeline</p>
-      <p>keycloak oidc</p>
-      <p>kong api gateway</p>
-      <p>kops</p>
-      <p>kube2iam</p>
-      <p>linkerd/istio?</p>
-      <p>metabase</p>
-      <p>metrics-server</p>
-      <p>nginx-ingress</p>
-      <p>node.js create react app (CRA)</p>
-      <p>oauth2 and oidc</p>
-      <p>okta</p>
-      <p>parity</p>
-      <p>pomerium</p>
-      <p>prometheus (prometheus-operator) alertmanager grafana</p>
-      <p>redis</p>
-      <p>self-organizing</p>
-      <p>skaffold</p>
-      <p>sonarqube</p>
-      <p>sonatype nexus and verdaccio</p>
-      <p>unleash</p>
-      <p>unleash</p>
-      <p>worked with Metamask team, spoke with PWC about security needs SOC2 etc.?</p>
-      <p>yak shaving</p>
-      <p>Joined ConsenSys in April 2018 on the Balanc3 project, transitioned to Meridio, and was the lone DevOps person supporting multiple teams that eventually coalesced into the Codefi group.</p>
-      <p>Currently specialized in architecting containerized solutions on Kubernetes using Helm, and building CI/CD workflows.</p>
-      <p>Advocate for a DevSecOps culture prioritizing infosec and compliance.</p>
-      <p>Experience and enthusiasm for building decentralized architectures using self-hosted free open source software and P2P protocols like IPFS.</p>
-      <p>{"Airswap"=>"“peer-to-peer trading through a suite of apps and tools that are free and easy to use.” Migrated some services to a new AWS account and new Kubernetes cluster."}</p>
-      <p>{"Activate"=>"“buy, use, and manage your utility tokens.” Refined CI/CD pipelines, improved code auditing and security scanning."}</p>
-      <p>{"Codefi"=>"“blockchain application suite powering commerce and finance.” Built new multi-tenant clusters and CI/CD pipelines in US and EU to support multiple teams and projects."}</p>
-      <p>{"Assets"=>"deployed new Kubernetes clusters and our Assets suite of applications for a real estate private equity platform."}</p>
-      <p>{"Meridio"=>"“create and invest in shares of individual properties on the blockchain.” Migrated expensive AWS ECS clusters to Kubernetes. Deployed several whiteboxed versions of this platform for various clients."}</p>
-      <p>{"Balanc3"=>"“financial management for digital assets.” Updated custom Ansible-based Kubernetes clusters to most popular community-supported tool at the time, kops. Also migrated all custom deployments to Helm. Significantly reduced the cost of the clusters as well by consolidating and performance tuning."}</p>
+      <p>For the last five years, I've been building, securing, and maintaining Kubernetes clusters and CI/CD pipelines. I've deployed Kubernetes to bare metal, AWS EKS, and Azure AKS with a variety of tools including: kubeadm, kubespray, kops, eksctl, Rancher RKE, and Terraform. Services were deployed to the cluster via Helm with tools like Helmfile, Skaffold, Kustomize, and Flux.</p>
+      <p>In 2018 and 2019, I was the sole DevOps person managing Kubernetes clusters and databases for the Balanc3, Meridio, Activate, and Airswap projects. I migrated our pipelines from Jenkins to GitLab CI, and started building what would eventually become an extensive library of CI/CD jobs used across the organization.</p>
+      <p>In 2020, a second DevOps engineer joined newly formed Codefi group. Together, we built infrastructure for the MetaMask Swap service and APIs. As of Nov. 2021, this service enabled more than $10 billion USD in peer-to-peer token swapping, generating $87.5 million in revenue. We did that with a team of just two!</p>
+      <p>In 2021, in addition to supporting previous projects, I helped launch Palm NFT Studio, which partnered with heni.com to create an interesting NFT project called "The Currency" by artist Damien Hirst.</p>
+      <p>In 2022 and early 2023, I supported MetaMask's Buy (fiat onramp), Portfolio, Bridge, and Staking products. During this time, we also started working towards SOC2 compliance, which meant we were consolidating and documenting our processes, auditing access, and migrating all infra to AWS SSO, Okta, and Pomerium.</p>
+      <p>Throughout my tenure, I've deployed many databases including: Redis, ElastiCache, PostgreSQL, RDS, Prometheus (inc. Alertmanager and Grafana), Elastic Stack (Elasticsearch, Filebeat, Kibana, and APM), MongoDB, MySQL/MariaDB, TimescaleDB, and Cassandra. Also Ethereum blockchain nodes Geth, Hyperledger Besu, Teku, Parity, and Truffle Suite's Ganache. And finally, bitcoind and IPFS. I also deployed artifact repositories: Chartmuseum, Harbor, Sonatype Nexus, and Verdaccio.</p>
     </div>
 <div class="left">Site Reliability Engineer at <a href="https://www.iovation.com/">iovation Inc.</a> (Portland, OR)</div>
 <div class="right">2017-11-13 to 2018-03-09<span class="years" data-start-date="2017-11-13" data-end-date="2018-03-09"></span></div>
 <div class="clear">
       <p>My team was working on GDPR and SOC 2 compliance, where my role was to automate the OS upgrade process for our Puppet, Sensu, Elasticsearch, and Jenkins hosts. Most notably, I wrote some scripts to control the flow of data into our Elasticsearch cluster, and perform a rolling upgrade. I also began deduplicating our collection of around forty separate copy/pasted upgrade scripts. I created a POC for a unified, generic upgrade process that would work with all of our hosts.</p>
-      <p>In addition to automation and upgrades, I experimented with Terraform as a way to manage our AWS IAM users and S3 buckets, but it wasn't quite the right tool for that job, so I ended up using AWS Config instead.</p>
     </div>
 <div class="left">Senior Member of Technical Staff at <a href="http://www.athenahealth.com/">athenahealth, Inc.</a> (Remote/Telecommute)</div>
 <div class="right">2015-08-31 to 2017-11-06<span class="years" data-start-date="2015-08-31" data-end-date="2017-11-06"></span></div>
